--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-First Github Page
+---
+layout: default
+title: BEAR.Sunday
+---
+
+<!-- Main component for a primary marketing message or call to action -->
+<div class="jumbotron">
+	<h1>BEAR.Sunday</h1>
+<p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
+<p>
+  <a class="btn btn-lg btn-primary" href="../../components/#navbar">View navbar docs &raquo;</a>
+</p>
+</div>
+
+    
