Added logo and side menu

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@ title: BEAR.Sunday
 <!-- Main component for a primary marketing message or call to action -->
 <div class="jumbotron">
 	<h1>BEAR.Sunday</h1>
-<p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
+<h2>An elegant, no-mess, 'Zen' inspired framework from Japan.</h2>
+<p>A resource orientated framework with a REST centric architecture, implementing 'Dependency Injection' and 'Aspect Orientated Programming' at it's core.</p>
 <p>
-  <a class="btn btn-lg btn-primary" href="../../components/#navbar">View navbar docs &raquo;</a>
+  <a class="btn btn-lg btn-primary" href="/documentation/en/introduction.html">Check out the docs</a>
 </p>
 </div>
 
