--- a/ja/index.html
+++ b/ja/index.html
@@ -9,6 +9,6 @@ title: BEAR.Sunday
 <h2>最高なPHPウェブフレームワーク。日本から、、</h2>
 <p>RESTアーキテクチャのリソース指向フレームワークです。全域に渡って適用される「依存性の注入」と「アスペクト指向プログラミング」がアプリケーションをシンプルでありながら柔軟でソリッドなものにします。</p>
 <p>
-  <a class="btn btn-lg btn-primary" href="/documentation/ja/introduction.html">ドキュメンテーションはこちら</a>
+  <a class="btn btn-lg btn-primary" href="../documentation/ja/introduction.html">ドキュメンテーションはこちら</a>
 </p>
 </div>
